--- a/style.css
+++ b/style.css
@@ -97,8 +97,8 @@
   }
   
   .main-text {
-    font-size: 2vw;
     font-size: 2.2vw;
+    padding: .5vw;
     background-color: #fff;
   }
   
@@ -114,6 +114,7 @@
   
   .js-link {
    font-size: 8vw;
+   margin-top: 3vw;
    animation: animation 3s;
   }
   
